@@ -58,7 +58,7 @@ public abstract class AbstractMenu {
             final String os = System.getProperty("os.name");
 
             if (os.contains("Windows")){
-                Runtime.getRuntime().exec("cls");
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
             } else {
                 System.out.print("\033[H\033[2J");
                 System.out.flush();
